changed fonts to make responsive

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/master.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -46,7 +47,7 @@
                   <span>r</span>
                   <span>d</span>
                 </h1>
-                <h2>Web Developer.</h2>
+                <h2>Bringing Web Devlopment & Marketing together.</h2>
                 <a href="#About" class="page-scroll">
                   <i class="fa fa-caret-down" style="font-size:3em"></i>
                 </a>
@@ -106,6 +107,8 @@
                   <li>PostgreSQL</li>
                   <li>Bootstrap</li>
                   <li>Phaser</li>
+                  <li>Digital Marketing</li>
+                  <li>AdWords</li>
                 </ul>
               </div>
             </div>
@@ -131,7 +134,9 @@
                       <!-- <div id="left-slide"> -->
                         <div class="numbertext">1 / 4</div>
                         <img src="https://thumb.ibb.co/jnnqhd/chickyrun.png" style="width:100%">
-                        <div class="text">Chicky Run</div>
+                        <a type="link" href="https://julieedelsvard.github.io/Chicky_Run/" target="_blank" class="link">
+                          <div class="text">Chicky Run</div>
+                        </a>
                       <!-- </div>
                       <div id="right-slide">
                         <h2>Hello</h2>
@@ -142,19 +147,25 @@
                   <div class="mySlides fade">
                     <div class="numbertext">2 / 4</div>
                     <img src="https://thumb.ibb.co/fSsiLy/ecoapp.png" style="width:100%">
-                    <div class="text">Eco App</div>
+                    <a type="link" href="https://ecosmart-app.herokuapp.com/" target="_blank" class="link">
+                      <div class="text">Eco App</div>
+                    </a>
                   </div>
 
                   <div class="mySlides fade">
                     <div class="numbertext">3 / 4</div>
                     <img src="https://thumb.ibb.co/bBGGNd/travelmate.png" style="width:100%">
-                    <div class="text">TravelMate</div>
+                    <a type="link" href="https://frozen-fjord-15863.herokuapp.com/" target="_blank" class="link">
+                      <div class="text">TravelMate</div>
+                    </a>
                   </div>
 
                   <div class="mySlides fade">
                     <div class="numbertext">4 / 4</div>
                     <img src="https://thumb.ibb.co/k0zNTJ/tictactoe.png" style="width:100%">
-                    <div class="text">Tic Tac Toe</div>
+                    <a type="link" href="https://julieedelsvard.github.io/Tic_Tac_Toe/" target="_blank" class="link">
+                      <div class="text">Tic Tac Toe</div>
+                    </a>
                   </div>
 
                   <!-- Next and previous buttons -->
